--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">GroupAssignment</string>
-
-    <!-- TODO: Remove or change this placeholder text -->
+    <string name="FACEBOOK_APP_ID">330661124150637</string>
+    <string name="ACCOUNT_KIT_CLIENT_TOKEN">4485f2cacd657e6479e648f099444140</string>
+    <string name="ak_login_protocol_schema">4485f2cacd657e6479e648f099444140</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
