--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,8 @@
     <string name="ACCOUNT_KIT_CLIENT_TOKEN">33355bd537fbbce81964032f5b1162a2</string>
     <string name="ak_login_protocol_schema">ak33355bd537fbbce81964032f5b1162a2</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string name="otherLocation">Khác</string>
+    <string name="company">Cơ quan</string>
+    <string name="house">Nhà riêng</string>
 </resources>
